Fix mobile alignment, remove form border, icons in single line

--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,14 @@ body {
 html, body, #root {
   height: 100%;
 }
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
